# local-2d-animation-lab

./: .gitignore  README.md  Tasks.md  pyproject.toml
docs/: action_generalization_pdca_report.md  artifact_repair_pdca_findings.md  controlnet_pdca_findings.md  environment_reproducibility.md  general_action_comparison.md  image_quality_refinement_pdca.md  img2img_refine_pdca_findings.md  local_cleanup_and_next_tasks_report.md  local_vl_asset_evaluation_pdca.md  lower_body_sidecar_start_reference_pdca_20260614.md  masked_quality_loop_pdca.md  next_phase_run_generation_pdca_report.md  output_cleanup_20260613_sidecar_probe.md  output_cleanup_20260614_lineart_sidecar_probe.md  output_cleanup_20260614_lower_body_sidecar_start_reference.md  output_cleanup_20260614_start_reference_gate.md  output_cleanup_20260614_start_reference_retake_localvl.md  output_layout_policy.md  progress_summary.md  reference_conditioned_regen_pdca.md  reference_lock_motion_template_deep_dive.md  run_template_vs_walk_template_report.md  sprite_sheet_benchmark_manifest.json  start_frame_first_walk_pdca.md  walk_candidate_comparison.md  walk_short_probe_pdca_20260613.md  wan_i2v_walk_findings.md  wan_preservation_sweep_from_sidecar_start_20260614.md
foot_guides/: index.json  validation.json
godot/: project.godot
pose_templates/: index.json  validation.json
scripts/: analyze_sprite_regions.py  apply_mask_cleanup.py  audit_comfy_wan_nodes.py  birefnet_foreground_masks.py  build_foot_guides.py  build_local_vl_calibration_set.py  build_pose_templates.py  build_synthetic_sideview_motion_source.py  (+34 more)
(+1648 files in other folders)
