[project]
name = "natural-sprite-lab"
version = "0.1.0"
description = "Local-first prototype pipeline for 2D sprite animation asset generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
natural-sprite-lab = "natural_sprite_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
